[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rdks-mbapi"
version = "0.1.0"
dependencies = [
  "bs4==0.0.1",
  "requests==2.28.1",
  "requests-toolbelt==1.0.0",
]
requires-python = ">=3.9"
authors = [{name = "Ethan Meng", email = "eyzmeng@gmail.com"}]
maintainers = [{name = "Ethan Meng", email = "eyzmeng@gmail.com"}]
description = "ManageBac API-like layer (private project)"
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.packages.find]
namespaces = true
